[package]
name = "sql-param"
version = "1.5.2"
edition = "2021"
description = "A tool for automatically replacing sql placeholders"
license = "MIT"
readme = "README.md"
authors = ["KURANADO <jingxinling1024@163.com>"]
homepage = "https://github.com/KURANADO2/sql-param"
repository = "https://github.com/KURANADO2/sql-param"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
arboard = "3.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
lazy_static = "1.5.0"
tui-textarea = "0.7.0"
regex = "1.11.1"
